    Updated hu_HU locale (thanks andris155)
    Updated ru locale (thanks imDaniX)
    Updated fr locale (thanks Elikill58)
    (API) Added SubSkillBlockEvent for some SubSkill events that have a block (eg: Green Thumb Block events)
    (API) Green Thumb (Block) now fires a SubSkillBlockEvent which is cancellable
    (API) Shroom Thumb now fires a SubSkillBlockEvent which is cancellable

    NOTE: A lot of sub-skills without random chance elements are missing events, this will be cleaned up in the near future. If you need something specific added sooner than that, post a GitHub issue for it and I'll patch it in.

Version 2.1.173
    The experience orbs dropped by Knock on Wood rank 2 during Tree Feller are now much less frequent but provide more XP
    mcMMO no longer damages fishing rods or drains a player's hunger when fishing
    Fixed a visual bug where players who had lucky perk were shown incorrect odds when using skill commands (such as /axes)
    Updated ja_JP locale (thanks ViaSnake)
    Fixed a bug where scoreboards were torn down inappropriately when moving to or from blacklisted worlds (thanks steve4744)
    Updated Kyori's adventure library to 4.4.0 (used by mcMMO to handle text components)

Version 2.1.172
    Updated german locale (thanks TheBusyBiscuit)
    Added 'mcmmo.broadcast.levelup' permission node, if a player lacks this node they will not have their level up milestones broadcast to chat, this is a default permission node
    Power Levels are now included in level up broadcasts and they have their own settings (mirroring the existing settings for skill broadcasts)
    Added 'General.Level_Up_Chat_Broadcasts.Broadcast_Powerlevels' to config.yml
    Added 'General.Level_Up_Chat_Broadcasts.Broadcast_Powerlevels.Enabled' to config.yml
    Added 'General.Level_Up_Chat_Broadcasts.Broadcast_Powerlevels.Milestone_Interval' to config.yml
    Added 'General.Level_Up_Chat_Broadcasts.Broadcast_Powerlevels.Broadcast_Targets.Send_To_Console' to config.yml