@@ -5,9 +5,11 @@ Version 2.1.174
     Updated fr locale (thanks Elikill58)
     (API) Added SubSkillBlockEvent for some SubSkill events that have a block (eg: Green Thumb Block events)
     (API) Green Thumb (Block) now fires a SubSkillBlockEvent which is cancellable
+    (API) Green Thumb (Plant) now fires SubSkillBlockEvent which is cancellable
     (API) Shroom Thumb now fires a SubSkillBlockEvent which is cancellable
 
     NOTE: A lot of sub-skills without random chance elements are missing events, this will be cleaned up in the near future. If you need something specific added sooner than that, post a GitHub issue for it and I'll patch it in.
+    I'm likely to separate Green Thumb into two distinct skills in an upcoming patch
 
 Version 2.1.173
     The experience orbs dropped by Knock on Wood rank 2 during Tree Feller are now much less frequent but provide more XP
